# railway-tsp

./: CMakeLists.txt  README.md
config/: railway.par
data/: station20230105free.csv
src/: group.cc  line.cc  railway.h  station.cc  tour.cc  tsp.cc
test/: test_group.sh  test_line.sh  test_station.sh  test_tour.sh  test_tsp.sh
test/data/: join.csv  line.csv  station.csv
test/expected/: group.csv  line.json  node.csv  railway.lkh  railway.tsp  shortest_path.csv  station.json  tour.json
